# typescript-client-generated/model/models.ts
@@ -1,4 +1,5 @@
 export * from './character';
 export * from './httpError';
+export * from './registerUser';
 export * from './stat';
 export * from './user';
