# typescript-client-generated/model/registerUser.ts
@@ -1,0 +1,24 @@
+/**
+ * hacky rest api
+ * REST API for test
+ *
+ * OpenAPI spec version: 3.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+
+export interface RegisterUser { 
+    username: string ;
+    password: string ;
+    email: string ;
+}    
+
+export interface RegisterUserOpt { 
+    username?: string;
+    password?: string;
+    email?: string;
+}
